--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,1 +1,11 @@
-<p>searchbar works!</p>
+<div class="row searchbar">
+  <div class="col-md-6">searchbox</div>
+  <div
+    class="col-md-3 notification d-flex justify-content-center align-items-center"
+  >
+    <i class="fa-solid fa-bell"></i>
+  </div>
+  <div class="col-md-3 user d-flex justify-content-center align-items-center">
+    <i class="fa-solid fa-user"></i>
+  </div>
+</div>
