--- a/src/app/features/login/login-form/login-form.component.html
+++ b/src/app/features/login/login-form/login-form.component.html
@@ -1,1 +1,30 @@
-<p>login-form works!</p>
+<div class="container-fluid min-vh-100 outer-box d-flex justify-content-center align-items-center">
+  <div class="container-fluid inner-box rounded-3 h-75">
+    <div class="row">
+      <div class="col py-3 pe-4 mx-4 mt-5">
+        <p class="fw-bold fs-2 mt-5">ĐĂNG NHẬP</p>
+        <p class="fw-bold">Đăng nhập vào hệ thống sử dụng tài khoản được cấp</p>
+        <form>
+          <div class="">
+            <label for="exampleInputEmail1" class="form-label fw-bold">Email</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Đăng nhập sử dụng email được cung cấp">
+          </div>
+          <div class="">
+            <div class="d-flex justify-content-between">
+              <label for="exampleInputPassword1" class="form-label fw-bold">Mật khẩu</label>
+              <a href="">Quên mật khẩu ?</a>
+            </div>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Mật khẩu">
+          </div>
+          <button type="submit" class="btn w-100 text-white">Đăng nhập</button>
+        </form>
+      </div>
+      <div class="col right-inner-box rounded-3 my-4 me-4">
+            <p class="fs-2 fw-bold text-white mx-3 mt-5">Hệ thống Quản lý <br> cấp Quận <br> các Trường Mầm Non</p>
+            <div class="mx-3 my-5">
+              <img src="assets/pictures/login.png" alt="" class="rounded w-100 h-100 mb-5">
+            </div>
+      </div>
+    </div>
+  </div>
+</div>
