--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,11 +1,19 @@
 <div class="row searchbar">
   <div class="col-md-6">searchbox</div>
   <div
-    class="col-md-3 notification d-flex justify-content-center align-items-center"
+    class="col-md-3 notification d-flex justify-content-center align-items-center pt-3"
   >
-    <i class="fa-solid fa-bell"></i>
+    <i
+      class="pi pi-bell"
+      pBadge
+      [value]="badgeValue"
+      severity="danger"
+      (click)="clearBadge()"
+    ></i>
   </div>
-  <div class="col-md-3 user d-flex justify-content-center align-items-center">
-    <i class="fa-solid fa-user"></i>
+  <div
+    class="col-md-3 user d-flex justify-content-center align-items-center pt-3"
+  >
+    <i class="pi pi-user"></i>
   </div>
 </div>
