issue detail, create issue

--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -4,7 +4,7 @@
     class="col-md-3 notification d-flex justify-content-center align-items-center pt-3"
   >
     <i
-      class="pi pi-bell"
+      class="fa-solid fa-bell"
       pBadge
       [value]="badgeValue"
       severity="danger"
@@ -14,6 +14,6 @@
   <div
     class="col-md-3 user d-flex justify-content-center align-items-center pt-3"
   >
-    <i class="pi pi-user"></i>
+    <i class="fa-solid fa-user-circle"></i>
   </div>
 </div>
