--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,1 +1,13 @@
-<p>main works!</p>
+<div class="row no-gutter-row h-100">
+  <div class="col-md-2">
+    <app-sidebar></app-sidebar>
+  </div>
+  <div class="col-md-10 h-100">
+    <div class="searchbar">
+      <app-searchbar></app-searchbar>
+    </div>
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
