--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
       <li class="p-2 rounded" routerLinkActive="active">
         <a class="" [routerLink]="['/userlist']">
           <div>
-            <i class="fa-solid fa-users-gear"></i>
+            <i class="fa-solid fa-users"></i>
             &nbsp; Danh sách người dùng
           </div>
         </a>
@@ -49,7 +49,7 @@
       <li class="p-2 rounded" routerLinkActive="active">
         <a class="" [routerLink]="['/initiationplan']">
           <div>
-            <i class="fa-solid fa-users-gear"></i>
+            <i class="fa-solid fa-calendar-days"></i>
             &nbsp; Kế hoạch thực hiện
           </div>
         </a>
@@ -57,7 +57,7 @@
       <li class="p-2 rounded" routerLinkActive="active">
         <a class="" [routerLink]="['/report']">
           <div>
-            <i class="fa-solid fa-users-gear"></i>
+            <i class="fa-solid fa-file-import"></i>
             &nbsp; Báo cáo
           </div>
         </a>
@@ -65,7 +65,7 @@
       <li class="p-2 rounded" routerLinkActive="active">
         <a class="" [routerLink]="['/conclusion']">
           <div>
-            <i class="fa-solid fa-users-gear"></i>
+            <i class="fa-solid fa-file-circle-check"></i>
             &nbsp; Kết luận
           </div>
         </a>
@@ -75,7 +75,7 @@
   <div>
     <ul>
       <li class="p-2 rounded">
-        <a class="" [routerLink]="['/logout']"  >
+        <a class="" [routerLink]="['/logout']">
           <div>
             <i class="fa-solid fa-right-from-bracket"></i>
             &nbsp; Đăng xuất
