--- a/src/app/features/login/forgot-password/forgot-password.component.html
+++ b/src/app/features/login/forgot-password/forgot-password.component.html
@@ -6,5 +6,5 @@
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
            placeholder="Nhập email đã đăng ký">
   </div>
-  <button type="submit" class="btn w-100 text-white">Gửi Email</button>
+  <button type="submit" class="btn w-100 text-white" data-toggle="modal" data-target="#exampleModal">Gửi Email</button>
 </form>
