--- a/src/app/features/post-login/issue-list/create-issue/create-issue.component.scss
+++ b/src/app/features/post-login/issue-list/create-issue/create-issue.component.scss
@@ -47,6 +47,7 @@
         background-color: $primary;
         border-radius: 8px;
         padding: 10px 40px;
+        border: none;
         &:hover,
         &:active {
             background-color: $primary-hover;
