--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,8 +1,8 @@
-<div class="row no-gutter-row h-100">
-  <div class="col-md-2">
+<div class="row no-gutter-row min-vh-100">
+  <div class="col-md-2 side-bar">
     <app-sidebar></app-sidebar>
   </div>
-  <div class="col-md-10 h-100">
+  <div class="col-md-10">
     <div class="searchbar">
       <app-searchbar></app-searchbar>
     </div>
