--- a/src/app/components/pagenotfound/pagenotfound.component.html
+++ b/src/app/components/pagenotfound/pagenotfound.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center flex-column min-vh-100 outer-box">
-  <h1 class="fw-bold fs-1">Không có kết quả</h1>
+  <p class="fw-bold fs-1">Không có kết quả</p>
   <img src="../../../assets/img/404-PageNotFound.svg" alt=""/>
-  <p class="fw-bold">Không thấy nội dung tìm kiếm. Hãy thử tìm kiếm khác.</p>
-  <button class="btn fw-bold fs-5"><i class="bi bi-caret-left-fill"></i>
+  <p class="fw-bold fs-3">Nội dung tìm kiếm không tồn tại. Hãy thử tìm kiếm khác.</p>
+  <button class="btn fw-bold fs-5" routerLink="/dashboard"><i class="bi bi-caret-left-fill"></i>
   Trở về trang chủ</button>
 </div>
