--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -1,34 +1,22 @@
 @import "../../../assets/scss/base";
-.notification {
-    i {
-        color: $primary;
-        font-size: 30px;
-        padding: 10px;
-        border-radius: 50%;
-    }
+
+.top-nav {
+  a {
+    padding: 0 20px;
+  }
+
+  i {
+    color: $primary;
+    font-size: 30px;
+    border-radius: 100%;
+
     &:hover {
-        i {
-            background-color: $primary-hover;
-            color: #fff;
-            transition: all 0.5s ease;
-        }
+      color: $primary-hover;
     }
-    .primary-badge {
-        background-color: $primary;
-    }
+  }
+
+  .primary-badge {
+    background-color: $primary;
+  }
 }
-.user {
-    &:hover {
-        i {
-            background-color: $primary-hover;
-            color: #fff;
-            transition: all 0.5s ease;
-        }
-    }
-    i {
-        color: $primary;
-        font-size: 30px;
-        padding: 10px;
-        border-radius: 50%;
-    }
-}
+
