--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     .sidebar-logo {
-        height: 100px;
+        height: 70px;
         img {
             width: 100%;
             height: 100%;
@@ -20,7 +20,7 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 20px;
+    padding-left: 0;
 }
 li {
     box-sizing: border-box;
