--- a/src/app/features/post-login/issue-list/create-issue/create-issue.component.html
+++ b/src/app/features/post-login/issue-list/create-issue/create-issue.component.html
@@ -66,76 +66,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="row document-item mb-2">
-        <div class="col-md-3">
-          <label for="">Tên tài liệu</label><br />
-          <input
-            pInputText
-            formControlName="docName"
-            placeholder="Điền tên tài liệu"
-          />
-        </div>
-        <div class="col-md-3">
-          <label for="">Mã tài liệu</label><br />
-          <input
-            pInputText
-            formControlName="docName"
-            placeholder="Điền mã tài liệu"
-          />
-        </div>
-        <div class="col-md-6">
-          <label for="">Tài liệu</label><br />
-          <div class="input-file">
-            <input
-              type="file"
-              #fileInput
-              style="display: none"
-              (change)="handleFileInputChange(fileInput)"
-            />
-            <input pInputText [value]="selectedFileName" readonly disabled />
-            <button
-              pButton
-              label="Chọn tệp"
-              (click)="fileInput.click()"
-            ></button>
-          </div>
-        </div>
-      </div>
-      <div class="row document-item mb-2">
-        <div class="col-md-3">
-          <label class="mb-1" for="">Tên tài liệu</label><br />
-          <input
-            pInputText
-            formControlName="docName"
-            placeholder="Điền tên tài liệu"
-          />
-        </div>
-        <div class="col-md-3">
-          <label class="mb-1" for="">Mã tài liệu</label><br />
-          <input
-            pInputText
-            formControlName="docName"
-            placeholder="Điền mã tài liệu"
-          />
-        </div>
-        <div class="col-md-6">
-          <label class="mb-1" for="">Tài liệu</label><br />
-          <div class="input-file">
-            <input
-              type="file"
-              #fileInput
-              style="display: none"
-              (change)="handleFileInputChange(fileInput)"
-            />
-            <input pInputText [value]="selectedFileName" readonly disabled />
-            <button
-              pButton
-              label="Chọn tệp"
-              (click)="fileInput.click()"
-            ></button>
-          </div>
-        </div>
-      </div> -->
+      <div class="d-flex flex-row justify-content-between">
       <div class="save-button d-flex align-items-end">
         <div class="div">
           <button pButton>Lưu</button>
@@ -145,6 +76,7 @@
         <div class="div">
           <button pButton type="button" (click)="appendDocInput()">Thêm</button>
         </div>
+      </div>
       </div>
     </div>
   </form>
