update issue html

--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
@@ -33,7 +33,7 @@
     <ng-template pTemplate="header">
       <tr>
         <th class="th-id">
-          <div>STT</div>
+          <div>ID</div>
         </th>
         <th pSortableColumn="planName">
           <div>
