--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
@@ -1,14 +1,20 @@
 @import "../../../../../assets/scss/base";
+.issue-content {
+    font-size: 16px;
+}
 
 .scrollview-item {
     height: 100%;
     border-radius: 10px;
     // border: 0.8px solid $primary;
     // box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 4px;
-    i {
-        color: $primary;
-        font-size: 30px;
+    .scrollview-item-icon {
+        i {
+            color: $primary;
+            font-size: 40px;
+        }
     }
+
     // .index {
     //     color: $primary;
     //     font-size: 30px;
@@ -18,6 +24,11 @@
         transition: all 0.5s ease;
         // cursor: pointer;
         color: #fff;
+        .scrollview-item-icon {
+            i {
+                color: #fff;
+            }
+        }
         i {
             color: #fff;
         }
@@ -26,6 +37,7 @@
         // }
     }
     .scrollview-item-content {
+        width: 200px;
         font-size: 16px;
         .font-weight-bold {
             font-weight: bold;
@@ -42,7 +54,7 @@
     .file-item-icon {
         i {
             color: $primary;
-            font-size: 30px;
+            font-size: 20px;
             padding: 10px;
         }
     }
