--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "node_modules/bootstrap/scss/bootstrap";
 @import "node_modules/bootstrap-icons/font/bootstrap-icons.css";
 /* Import PrimeNG styles */
 @import "primeng/resources/primeng.min.css";
@@ -8,22 +8,29 @@
 //SCROLLBAR CSS
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgb(214, 214, 214);
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px rgb(214, 214, 214);
+  border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #4253f0;
-    border-radius: 10px;
+  background: #4253f0;
+  border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #9aa3ff;
+  background: #9aa3ff;
 }
+
+$theme-colors: (
+  "primary": #4253f0
+);
+
+
+
